welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:4: error: type MIN_VALUE is not a member of object Integer
  var m2 : Integer.MIN_VALUE
                   ^max2Value:4: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var m2 : Integer.MIN_VALUE
      ^max2Value:4: error: local variables must be initialized
  var m2 : Integer.MIN_VALUE
      ^